[gd_scene load_steps=14 format=2]

[ext_resource path="res://Capital Ships/CapitalShip.gd" type="Script" id=1]
[ext_resource path="res://Capital Ships/capital_ship.dae" type="PackedScene" id=2]
[ext_resource path="res://Ship/Material.tres" type="Material" id=3]
[ext_resource path="res://Capital Ships/Hangar/Hangar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Ship/LandingArea/LandingArea.tscn" type="PackedScene" id=5]
[ext_resource path="res://Health System/HealthSystem.tscn" type="PackedScene" id=6]
[ext_resource path="res://Audio/alarm.wav" type="AudioStream" id=7]
[ext_resource path="res://Interface/Themes/default_theme.tres" type="Theme" id=8]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
albedo_color = Color( 0.698039, 0.882353, 1, 0.196078 )

[sub_resource type="ConcavePolygonShape" id=4]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="ConcavePolygonShape" id=5]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 211, 14.6358, 112 )

[node name="CapitalShip" type="Spatial" groups=[
"CapitalShips",
]]
script = ExtResource( 1 )

[node name="Scene Root" parent="." instance=ExtResource( 2 )]
transform = Transform( 50, 0, 0, 0, 50, 0, 0, 0, 50, 0, 0, 0 )

[node name="character" parent="Scene Root" index="0"]
transform = Transform( 0.015, 0, 0, 0, 0.03, 0, 0, 0, 0.015, -0.506675, -1.18929, -4.19718 )
mesh = null

[node name="up" parent="Scene Root" index="1"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, -1.74846e-07, 0, 1.74846e-07, 1, 0, 0, 0 )
material/0 = ExtResource( 3 )

[node name="col" parent="Scene Root/up" index="0" groups=[
"FrigatesColliders",
]]
editor/display_folded = true

[node name="engines" parent="Scene Root" index="2"]
editor/display_folded = true
material/0 = ExtResource( 3 )

[node name="col" parent="Scene Root/engines" index="0" groups=[
"FrigatesColliders",
]]
editor/display_folded = true

[node name="bottom" parent="Scene Root" index="3"]
editor/display_folded = true
material/0 = ExtResource( 3 )

[node name="col" parent="Scene Root/bottom" index="0" groups=[
"FrigatesColliders",
]]
editor/display_folded = true

[node name="Hangar" parent="." instance=ExtResource( 4 )]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="HangarDoor" type="MeshInstance" parent="Hangar"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 25, 0, 0, 0, 135, -227.5, -41.608, -278.009 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="StaticBody" type="StaticBody" parent="Hangar/HangarDoor"]
editor/display_folded = true
collision_layer = 16
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Hangar/HangarDoor/StaticBody"]
shape = SubResource( 4 )

[node name="HangarDoor2" type="MeshInstance" parent="Hangar"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 25, 0, 0, 0, 135, 227.5, -41.608, -278.009 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="StaticBody" type="StaticBody" parent="Hangar/HangarDoor2"]
editor/display_folded = true
collision_layer = 16
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Hangar/HangarDoor2/StaticBody"]
shape = SubResource( 5 )

[node name="LandingArea" parent="." instance=ExtResource( 5 )]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -51.525, -280.055 )

[node name="CollisionShape" parent="LandingArea" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12.4394, 1.35489 )
shape = SubResource( 6 )

[node name="HealthSystem" parent="." instance=ExtResource( 6 )]
max_health = 4000

[node name="DestructionTimer" type="Timer" parent="."]
wait_time = 35.0
one_shot = true

[node name="Alarm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -4.0

[node name="Lights" type="Spatial" parent="."]
editor/display_folded = true

[node name="SpotLight" type="SpotLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -25.8039, -209.625 )
light_energy = 3.5
spot_range = 97.2
spot_angle = 51.4

[node name="SpotLight2" type="SpotLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -170, -25.804, -209.625 )
light_energy = 3.5
spot_range = 97.2
spot_angle = 51.4

[node name="SpotLight3" type="SpotLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 170, -25.804, -209.625 )
light_energy = 3.5
spot_range = 97.2
spot_angle = 51.4

[node name="SpotLight4" type="SpotLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -25.8039, -322.755 )
light_energy = 3.5
spot_range = 97.2
spot_angle = 51.4

[node name="SpotLight5" type="SpotLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 170, -25.804, -322.754 )
light_energy = 3.5
spot_range = 97.2
spot_angle = 51.4

[node name="SpotLight6" type="SpotLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -170, -25.804, -322.754 )
light_energy = 3.5
spot_range = 97.2
spot_angle = 51.4

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -216.0
margin_top = -79.0
margin_right = -100.0
margin_bottom = -50.0
theme = ExtResource( 8 )
text = "400000 HP"
[connection signal="die" from="HealthSystem" to="." method="_on_HealthSystem_die"]
[connection signal="timeout" from="DestructionTimer" to="." method="_on_DestructionTimer_timeout"]

[editable path="Scene Root"]

[editable path="Hangar"]

[editable path="LandingArea"]
